// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  className="w-full"
>
  <label
    className="block uppercase tracking-wide text-gray-700 dark:text-white text-xs font-bold mb-1"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="block w-full bg-gray-200 dark:bg-gray-500 dark:text-white text-gray-700 rounded p-2 md:px-3 md:py-2 mb-3 focus:outline-none focus:shadow-outline focus:bg-white dark:focus:bg-gray-500"
    id="test"
    name="test"
    onChange={[MockFunction]}
    type="text"
    value="testing"
  />
</div>
`;

exports[`Input renders min/max correctly 1`] = `
<div
  className="w-full"
>
  <label
    className="block uppercase tracking-wide text-gray-700 dark:text-white text-xs font-bold mb-1"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="block w-full bg-gray-200 dark:bg-gray-500 dark:text-white text-gray-700 rounded p-2 md:px-3 md:py-2 mb-3 focus:outline-none focus:shadow-outline focus:bg-white dark:focus:bg-gray-500"
    id="test"
    max={8}
    min={0}
    name="test"
    onChange={[MockFunction]}
    type="text"
    value="testing"
  />
</div>
`;

exports[`Input renders placeholder correctly 1`] = `
<div
  className="w-full"
>
  <label
    className="block uppercase tracking-wide text-gray-700 dark:text-white text-xs font-bold mb-1"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="block w-full bg-gray-200 dark:bg-gray-500 dark:text-white text-gray-700 rounded p-2 md:px-3 md:py-2 mb-3 focus:outline-none focus:shadow-outline focus:bg-white dark:focus:bg-gray-500"
    id="test"
    name="test"
    onChange={[MockFunction]}
    placeholder="Type here..."
    type="text"
    value="testing"
  />
</div>
`;
